Brk spacing fix

--- a/public/static/assets/css/main/style.css
+++ b/public/static/assets/css/main/style.css
@@ -517,6 +517,7 @@ body * {
 .announcement_content_container {
 	display: inline-flex;
 	flex-grow: 1;
+	margin-left: var(--chat_side_spacing);
 }
 
 .chat_area_clone .announcement_content_container {
@@ -531,10 +532,6 @@ body * {
 .brk_container {
 	display: flex;
 	flex-direction: column;
-}
-
-#chat_area .brk_container {
-	margin-right: var(--chat_side_spacing);
 }
 
 .brk {
